# sites-spectral-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
.streamlit/: config.toml
sites_spectral_dashboard/: app.py  app_services.yaml
sites_spectral_dashboard/config/: logos.toml
sites_spectral_dashboard/research_stations/: SITES-stations.yaml
sites_spectral_dashboard/services/: UAVs_flying_calendar.py  UAVs_image_corrections.py  fixed-sensors.py  phenology-cameras-dashboard.py  satellite-remote-sensing.py  sites-spectral-main-dashboard.py  sites-spectral-stations-map-dashboard.py  sites-spectral-toolbox.py  sites-spectral-uav-flying-calendar.py  sites-spectral-uavs-dashboard.py  sites_map.py
